# tinynvr

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  biome.json  config.yaml.example  mise.toml  prek.toml  pyproject.toml
src/nvr/: app.py  config.py  recorder.py  retention.py
static/: app.js  index.html  rate_test.html  rate_test.js
tinynvr/: app.py  config.py  db.py  duration.py  probe.py  recorder.py  retention.py  sprite.py
