[project]
name = "tinynvr"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "asyncinotify>=4.4.2",
    "fastapi",
    "ruamel-yaml>=0.19.1",
    "uvicorn[standard]",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tinynvr"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4",
    "SIM", "PL", "RUF", "PIE", "RET", "PERF", "FURB",
    "LOG", "G", "T20", "PTH", "TID",
]
ignore = ["PLR09", "PLR2004", "PLW2901", "SIM108"]

[tool.pyright]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
